--- a/trunk/src/add.html
+++ b/trunk/src/add.html
@@ -1,9 +1,8 @@
 ﻿<label for="name">
     name</label><input id="name" type="text" value="" /><br />
 <label for="url">
-    url</label><input id="url" type="text" value="" /><br />
-<label for="bg">
-    编码</label><input id="gb" type="checkbox" checked="checked" /><br />
+    url</label><textarea cols="25" id="url" rows="3" style="width: 230px;"></textarea><br />
+<input id="gb" type="checkbox" /><label for="gb">gb2312编码</label><br />
 <input id="add" type="button" value="确定" /><input id="cancel" type="button" value="取消" />
 
 <script>
