chrome升级到4.0.302.2dev后,超级拖拽失效

--- a/src/options.html
+++ b/src/options.html
@@ -43,6 +43,11 @@
             margin-right: 3px;
             margin-top: 1px;
         }
+        .withvideo
+        {
+            background: url(images/ico_video3.gif) no-repeat 100% 50%;
+            padding-right: 17px;
+        }
     </style>
 
     <script type="text/javascript">
@@ -108,7 +113,7 @@
         <span class="state nouse"></span><span>当前禁用</span>
         <ul id="engines">
         </ul>
-        <input id="add" type="button" value="添加" />
+        <input id="add" type="button" value="添加" /><a class="withvideo" target="_blank" href="http://www.cnblogs.com/wangxiang/articles/1647917.html">帮助</a>
         <h5>
             拖拽选取文本:
         </h5>
