--- a/src/options.html
+++ b/src/options.html
@@ -3,7 +3,9 @@
 <head>
     <title></title>
 
-    <script src="js/core.js"></script>
+    <script type="text/javascript" src="js/core.js"></script>
+
+    <script type="text/javascript" src="js/util.js"></script>
 
     <style type="text/css">
         .center
@@ -168,62 +170,7 @@
         /**
         *预定义的搜索引擎
         */
-        var engines_ = [
-            {
-                id: 0, //搜索引擎id
-                orderId: 0,
-                name: "用谷歌搜索",
-                url: "http://www.google.com/search?q={s}",
-                charset: "utf-8",
-                pic: "images/google.jpg",
-                isused: true //是否使用此搜索引擎
-            },
-            {
-                id: 1,
-                orderId: 1,
-                name: "用百度搜索",
-                url: "http://www.baidu.com/s?ie=utf-8&f=8&wd={s}",
-                charset: "utf-8",
-                pic: "images/baidu.jpg",
-                isused: false
-            },
-            {
-                id: 2,
-                orderId: 2,
-                name: "必应搜索",
-                url: "http://www.bing.com/search?q={s}",
-                charset: "utf-8",
-                pic: "images/bing.jpg",
-                isused: false
-            },
-            {
-                id: 3,
-                orderId: 3,
-                name: "谷歌购物",
-                url: "http://www.google.cn/products?aq=f&q={s}",
-                charset: "utf-8",
-                pic: "images/shopping.jpg",
-                isused: true
-            },
-            {
-                id: 4,
-                orderId: 4,
-                name: "百度百科",
-                url: "http://baike.baidu.com/searchword/?pic=1&sug=1&word={s}",
-                charset: "gb2312",
-                pic: "images/wiki.jpg",
-                isused: true
-            },
-            {
-                id: 5,
-                orderId: 5,
-                name: "手气不错",
-                url: "http://www.google.cn/search?hl=zh-CN&source=hp&q={s}&btnI=%C2%A0%E6%89%8B%E6%B0%94%E4%B8%8D%E9%94%99%C2%A0&aq=f&oq=",
-                charset: "gb2312",
-                pic: "images/wiki.jpg",
-                isused: true
-            }
-        ];
+        var engines_ = JSON.parse(getMessage("engines"));
 
         //entity engine
         var engine = {};
