--- a/trunk/src/options.html
+++ b/trunk/src/options.html
@@ -113,11 +113,6 @@
         </ul>
         <input id="add" type="button" value="添加" /><a class="withvideo" target="_blank" href="http://www.cnblogs.com/wangxiang/articles/1647917.html">帮助</a>
         <h5>
-            拖拽选取文本:
-        </h5>
-        <select id="selectEngine">
-        </select>
-        <h5>
             显示搜索结果:</h5>
         <select id="search_show">
         </select>
@@ -177,6 +172,14 @@
         </div>
         <div id="dragtext" style="display: none;">
             <p>
+                <label for="selectEngine">
+                    拖拽选取文本:
+                </label><br />
+                <select id="selectEngine">
+                </select>
+            </p>
+            <hr />
+            <p>
                 <label for="textright">
                     向右:</label><br />
                 <select id="textright">
@@ -212,7 +215,10 @@
         /**
         *预定义的搜索引擎
         */
-        var engines_ = JSON.parse(getMessage("engines"));
+        var message = "[{\"id\":0,\"orderid\":0,\"name\":\"用谷歌搜索\",\"url\":\"http://www.google.com/search?q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/google.jpg\",\"isused\":true},{\"id\":1,\"orderid\":1,\"name\":\"用百度搜索\",\"url\":\"http://www.baidu.com/s?ie=utf-8&f=8&wd={s}\",\"charset\":\"utf-8\",\"pic\":\"images/baidu.jpg\",\"isused\":false},{\"id\":2,\"orderid\":2,\"name\":\"必应搜索\",\"url\":\"http://www.bing.com/search?q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/bing.jpg\",\"isused\":false},{\"id\":3,\"orderid\":3,\"name\":\"谷歌购物\",\"url\":\"http://www.google.cn/products?aq=f&q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/shopping.jpg\",\"isused\":true},{\"id\":4,\"orderid\":4,\"name\":\"百度百科\",\"url\":\"http://baike.baidu.com/searchword/?pic=1&sug=1&word={s}\",\"charset\":\"gb2312\",\"pic\":\"images/wiki.jpg\",\"isused\":true},{\"id\":5,\"orderid\":5,\"name\":\"手气不错\",\"url\":\"http://www.google.cn/search?hl=zh-CN&source=hp&q={s}&btnI=%C2%A0%E6%89%8B%E6%B0%94%E4%B8%8D%E9%94%99%C2%A0&aq=f&oq=\",\"charset\":\"gb2312\",\"pic\":\"images/wiki.jpg\",\"isused\":true}]";       
+        var engines_ = JSON.parse(message);
+        //有时获取不到信息
+        //var engines_ = JSON.parse(getMessage("engines"));
 
         //entity engine
         var engine = {};
@@ -295,8 +301,6 @@
                         engine.url = eng.url;
                         engine.charset = eng.charset;
                         engine.isused = eng.isused;
-
-
 
                         var ele = e.target;
                         dialogupdate = new dialog();
