--- a/src/options.html
+++ b/src/options.html
@@ -351,7 +351,7 @@
             oSelectShowSearch.options.add(new Option(v, i));
         });
 
-        oSelectShowSearch.selectedIndex = getIndexByValue(oSelectShowSearch, getData("showsearch"));
+        oSelectShowSearch.selectedIndex = getIndexByValue(oSelectShowSearch, getData("showsearch") || "newwindow");
 
         addEvent(oSelectShowSearch, "change", function() {
             saveData("showsearch", this.value);
