--- a/trunk/src/options.html
+++ b/trunk/src/options.html
@@ -174,7 +174,8 @@
             <p>
                 <label for="selectEngine">
                     拖拽选取文本:
-                </label><br />
+                </label>
+                <br />
                 <select id="selectEngine">
                 </select>
             </p>
@@ -215,7 +216,7 @@
         /**
         *预定义的搜索引擎
         */
-        var message = "[{\"id\":0,\"orderid\":0,\"name\":\"用谷歌搜索\",\"url\":\"http://www.google.com/search?q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/google.jpg\",\"isused\":true},{\"id\":1,\"orderid\":1,\"name\":\"用百度搜索\",\"url\":\"http://www.baidu.com/s?ie=utf-8&f=8&wd={s}\",\"charset\":\"utf-8\",\"pic\":\"images/baidu.jpg\",\"isused\":false},{\"id\":2,\"orderid\":2,\"name\":\"必应搜索\",\"url\":\"http://www.bing.com/search?q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/bing.jpg\",\"isused\":false},{\"id\":3,\"orderid\":3,\"name\":\"谷歌购物\",\"url\":\"http://www.google.cn/products?aq=f&q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/shopping.jpg\",\"isused\":true},{\"id\":4,\"orderid\":4,\"name\":\"百度百科\",\"url\":\"http://baike.baidu.com/searchword/?pic=1&sug=1&word={s}\",\"charset\":\"gb2312\",\"pic\":\"images/wiki.jpg\",\"isused\":true},{\"id\":5,\"orderid\":5,\"name\":\"手气不错\",\"url\":\"http://www.google.cn/search?hl=zh-CN&source=hp&q={s}&btnI=%C2%A0%E6%89%8B%E6%B0%94%E4%B8%8D%E9%94%99%C2%A0&aq=f&oq=\",\"charset\":\"gb2312\",\"pic\":\"images/wiki.jpg\",\"isused\":true}]";       
+        var message = "[{\"id\":0,\"orderid\":0,\"name\":\"用谷歌搜索\",\"url\":\"http://www.google.com/search?q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/google.jpg\",\"isused\":true},{\"id\":1,\"orderid\":1,\"name\":\"用百度搜索\",\"url\":\"http://www.baidu.com/s?ie=utf-8&f=8&wd={s}\",\"charset\":\"utf-8\",\"pic\":\"images/baidu.jpg\",\"isused\":false},{\"id\":2,\"orderid\":2,\"name\":\"必应搜索\",\"url\":\"http://www.bing.com/search?q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/bing.jpg\",\"isused\":false},{\"id\":3,\"orderid\":3,\"name\":\"谷歌购物\",\"url\":\"http://www.google.cn/products?aq=f&q={s}\",\"charset\":\"utf-8\",\"pic\":\"images/shopping.jpg\",\"isused\":true},{\"id\":4,\"orderid\":4,\"name\":\"百度百科\",\"url\":\"http://baike.baidu.com/searchword/?pic=1&sug=1&word={s}\",\"charset\":\"gb2312\",\"pic\":\"images/wiki.jpg\",\"isused\":true},{\"id\":5,\"orderid\":5,\"name\":\"手气不错\",\"url\":\"http://www.google.cn/search?hl=zh-CN&source=hp&q={s}&btnI=%C2%A0%E6%89%8B%E6%B0%94%E4%B8%8D%E9%94%99%C2%A0&aq=f&oq=\",\"charset\":\"gb2312\",\"pic\":\"images/wiki.jpg\",\"isused\":true}]";
         var engines_ = JSON.parse(message);
         //有时获取不到信息
         //var engines_ = JSON.parse(getMessage("engines"));
@@ -420,21 +421,27 @@
             "textup": "newwindow",
             "textdown": "newwindow"
         };
-
+        
         //设置默认值
-        !localStorage["superdrag"] && saveData("superdrag", JSON.stringify(superDrag));
+        if (!localStorage["superdrag"]) {
+            saveData("superdrag", JSON.stringify(superDrag))
+        } else {
+            superDrag = JSON.parse(getData("superdrag"));
+        }
 
         function loadOption(opt) {
-            var drags = JSON.parse(getData("superdrag"));
+            console.log(getData("superdrag"));
+            //var drags = JSON.parse(getData("superdrag"));
             //加载列表
             var dragImageOption = messages[opt].option;
-            each("right left up down".split(" "), function(i) {
+            each("right,left,up,down".split(","), function(i) {
                 var ele = $(opt + this);
+
                 each(dragImageOption, function(i, v) {
                     ele.options.add(new Option(v, i));
                 });
 
-                ele.selectedIndex = getIndexByValue(ele, drags[opt + this]);
+                ele.selectedIndex = getIndexByValue(ele, superDrag[opt + this]);
 
                 addEvent(ele, "change", saveDragOption);
             });
@@ -443,7 +450,6 @@
 
         function saveDragOption() {
             superDrag[this.id] = this.value;
-            console.log(JSON.stringify(superDrag));
             saveData("superdrag", JSON.stringify(superDrag));
         }
 
